@@ -27,7 +27,7 @@
 <bookinfo>
   <title>PHPlot Reference Manual</title>
   <corpauthor>The PHPlot Documentation Team</corpauthor>
-  <releaseinfo>Release &version; for PHPlot-5.1.1</releaseinfo>
+  <releaseinfo>Release &version; for PHPlot-5.1.2</releaseinfo>
   <copyright><year>2005-2010</year><holder>The PHPlot Documentation Team</holder></copyright>
   <legalnotice id="copyright">
     <para>
